Update nuget packages

--- a/Last.fm-Scrubbler-WPF/packages.config
+++ b/Last.fm-Scrubbler-WPF/packages.config
@@ -5,15 +5,15 @@
   <package id="Extended.Wpf.Toolkit" version="3.4.0" targetFramework="net461" />
   <package id="Hardcodet.NotifyIcon.Wpf" version="1.0.8" targetFramework="net461" />
   <package id="Inflatable.Lastfm" version="1.1.0.339" targetFramework="net461" />
-  <package id="Inflatable.Lastfm.SQLite" version="0.2.0.211" targetFramework="net452" />
+  <package id="Inflatable.Lastfm.SQLite" version="1.1.0.351" targetFramework="net461" />
   <package id="Microsoft.Bcl" version="1.1.10" targetFramework="net461" />
   <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="net461" />
   <package id="Microsoft.Net.Http" version="2.2.29" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net461" />
-  <package id="Octokit" version="0.29.0" targetFramework="net461" />
+  <package id="Octokit" version="0.31.0" targetFramework="net461" />
   <package id="RestSharp" version="106.3.1" targetFramework="net461" />
   <package id="SpotifyAPI-NET" version="2.19.0" targetFramework="net461" />
-  <package id="sqlite-net-pcl" version="1.5.166-beta" targetFramework="net461" />
+  <package id="sqlite-net-pcl" version="1.4.118" targetFramework="net461" />
   <package id="SQLitePCL.raw_basic" version="0.9.0-pre8" targetFramework="net461" />
   <package id="SQLitePCLRaw.bundle_green" version="1.1.11" targetFramework="net461" />
   <package id="SQLitePCLRaw.core" version="1.1.11" targetFramework="net461" />
