--- a/Last.fm-Scrubbler-WPF/App.config
+++ b/Last.fm-Scrubbler-WPF/App.config
@@ -38,7 +38,7 @@
         <value>False</value>
       </setting>
       <setting name="AutoScrobbleCache" serializeAs="String">
-        <value>True</value>
+        <value>False</value>
       </setting>
       <setting name="CSVDelimiters" serializeAs="String">
         <value>,</value>
