Revert "CacheScrobbler: Remove unneeded some code, better status reporting"
This reverts commit 92e18675ca3ad2f75a8562be1179bb2cc4e9ef44.

--- a/Last.fm-Scrubbler-WPF/App.config
+++ b/Last.fm-Scrubbler-WPF/App.config
@@ -38,7 +38,7 @@
         <value>False</value>
       </setting>
       <setting name="AutoScrobbleCache" serializeAs="String">
-        <value>False</value>
+        <value>True</value>
       </setting>
       <setting name="CSVDelimiters" serializeAs="String">
         <value>,</value>
