--- a/Last.fm-Scrubbler-WPF-Test/Last.fm-Scrubbler-WPF-Test.csproj
+++ b/Last.fm-Scrubbler-WPF-Test/Last.fm-Scrubbler-WPF-Test.csproj
@@ -112,6 +112,7 @@
     <Compile Include="ModelTests\UserTest.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ScrobblerTests\CacheScrobblerTest.cs" />
     <Compile Include="ScrobblerTests\CSVScrobbleTest.cs" />
     <Compile Include="ScrobblerTests\FileScrobblerTest.cs" />
     <Compile Include="ScrobblerTests\FriendScrobbleTest.cs" />
