--- a/Last.fm-Scrubbler-WPF-Test/Last.fm-Scrubbler-WPF-Test.csproj
+++ b/Last.fm-Scrubbler-WPF-Test/Last.fm-Scrubbler-WPF-Test.csproj
@@ -114,6 +114,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ScrobblerTests\CacheScrobblerTest.cs" />
     <Compile Include="ScrobblerTests\CSVScrobbleTest.cs" />
+    <Compile Include="ScrobblerTests\DatabaseScrobblerTest.cs" />
     <Compile Include="ScrobblerTests\FileScrobblerTest.cs" />
     <Compile Include="ScrobblerTests\FriendScrobbleTest.cs" />
     <Compile Include="ScrobblerTests\ManualScrobblerTest.cs" />
