LoginViewModelTest: Fix pwBox not being initialized when testing

--- a/Last.fm-Scrubbler-WPF-Test/Last.fm-Scrubbler-WPF-Test.csproj
+++ b/Last.fm-Scrubbler-WPF-Test/Last.fm-Scrubbler-WPF-Test.csproj
@@ -62,6 +62,7 @@
     <Reference Include="nunitlite, Version=3.10.1.0, Culture=neutral, PublicKeyToken=2638cd05610744eb, processorArchitecture=MSIL">
       <HintPath>..\packages\NUnitLite.3.10.1\lib\net45\nunitlite.dll</HintPath>
     </Reference>
+    <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
     <Reference Include="System" />
     <Reference Include="System.Configuration" />
@@ -106,6 +107,7 @@
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
+    <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ExtraFunctionsTests\PasteYourTasteTest.cs" />
