Update nuget packages

--- a/Last.fm-Scrubbler-WPF-Test/App.config
+++ b/Last.fm-Scrubbler-WPF-Test/App.config
@@ -19,7 +19,7 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="RestSharp" publicKeyToken="598062e77f915f75" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-106.4.1.0" newVersion="106.4.1.0" />
+        <bindingRedirect oldVersion="0.0.0.0-106.5.2.0" newVersion="106.5.2.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Threading.Tasks.Extensions" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
@@ -36,6 +36,10 @@
       <dependentAssembly>
         <assemblyIdentity name="SQLitePCLRaw.batteries_v2" publicKeyToken="8226ea5df37bcae9" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-1.1.11.121" newVersion="1.1.11.121" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Runtime.CompilerServices.Unsafe" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.0.4.1" newVersion="4.0.4.1" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
