--- a/Last.fm-Scrubbler-WPF-Test/Last.fm-Scrubbler-WPF-Test.csproj
+++ b/Last.fm-Scrubbler-WPF-Test/Last.fm-Scrubbler-WPF-Test.csproj
@@ -62,6 +62,9 @@
     <Reference Include="nunitlite, Version=3.11.0.0, Culture=neutral, PublicKeyToken=2638cd05610744eb, processorArchitecture=MSIL">
       <HintPath>..\packages\NUnitLite.3.11.0\lib\net45\nunitlite.dll</HintPath>
     </Reference>
+    <Reference Include="Octokit, Version=0.32.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Octokit.0.32.0\lib\net45\Octokit.dll</HintPath>
+    </Reference>
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
     <Reference Include="System" />
@@ -111,8 +114,11 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ConfigurationTest\NewVersionViewModelTest.cs" />
     <Compile Include="ExtraFunctionsTests\PasteYourTasteTest.cs" />
     <Compile Include="LoginTests\LoginViewModelTest.cs" />
+    <Compile Include="MockData\ReleaseAssetMock.cs" />
+    <Compile Include="MockData\ReleaseMock.cs" />
     <Compile Include="ScrobblingTests\UserScrobblerTest.cs" />
     <Compile Include="LoginTests\UserTest.cs" />
     <Compile Include="Program.cs" />
