--- a/Last.fm-Scrubbler-WPF-Test/packages.config
+++ b/Last.fm-Scrubbler-WPF-Test/packages.config
@@ -8,6 +8,7 @@
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net461" />
   <package id="NUnit" version="3.11.0" targetFramework="net461" />
   <package id="NUnitLite" version="3.11.0" targetFramework="net461" />
+  <package id="Octokit" version="0.32.0" targetFramework="net461" />
   <package id="OpenCover" version="4.6.519" targetFramework="net461" />
   <package id="System.Diagnostics.DiagnosticSource" version="4.5.1" targetFramework="net461" />
   <package id="System.Net.Http" version="4.3.4" targetFramework="net461" />
