GeneralSettingsViewModel: add unit tests

--- a/Last.fm-Scrubbler-WPF-Test/Last.fm-Scrubbler-WPF-Test.csproj
+++ b/Last.fm-Scrubbler-WPF-Test/Last.fm-Scrubbler-WPF-Test.csproj
@@ -114,6 +114,7 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ConfigurationTest\GeneralSettingsViewModelTest.cs" />
     <Compile Include="ConfigurationTest\NewVersionViewModelTest.cs" />
     <Compile Include="ExtraFunctionsTests\PasteYourTasteTest.cs" />
     <Compile Include="LoginTests\LoginViewModelTest.cs" />
