--- a/Last.fm-Scrubbler-WPF-Test/packages.config
+++ b/Last.fm-Scrubbler-WPF-Test/packages.config
@@ -3,7 +3,7 @@
   <package id="Caliburn.Micro" version="4.0.0-alpha.1" targetFramework="net461" />
   <package id="Caliburn.Micro.Core" version="4.0.0-alpha.1" targetFramework="net461" />
   <package id="Castle.Core" version="4.3.1" targetFramework="net461" />
-  <package id="Inflatable.Lastfm" version="1.1.0.339" targetFramework="net461" />
+  <package id="Inflatable.Lastfm" version="1.1.999-prerelease" targetFramework="net461" />
   <package id="Moq" version="4.10.0" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net461" />
   <package id="NUnit" version="3.11.0" targetFramework="net461" />
