--- a/Last.fm-Scrubbler-WPF-Test/packages.config
+++ b/Last.fm-Scrubbler-WPF-Test/packages.config
@@ -9,7 +9,7 @@
   <package id="NUnit" version="3.11.0" targetFramework="net461" />
   <package id="NUnitLite" version="3.11.0" targetFramework="net461" />
   <package id="Octokit" version="0.32.0" targetFramework="net461" />
-  <package id="OpenCover" version="4.6.519" targetFramework="net461" />
+  <package id="OpenCover" version="4.7.870-rc" targetFramework="net461" />
   <package id="System.Diagnostics.DiagnosticSource" version="4.6.0-preview.18571.3" targetFramework="net461" />
   <package id="System.Net.Http" version="4.3.4" targetFramework="net461" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.6.0-preview.18571.3" targetFramework="net461" />
