--- a/Last.fm-Scrubbler-WPF-Test/packages.config
+++ b/Last.fm-Scrubbler-WPF-Test/packages.config
@@ -3,6 +3,7 @@
   <package id="Caliburn.Micro" version="4.0.0-alpha.1" targetFramework="net461" />
   <package id="Caliburn.Micro.Core" version="4.0.0-alpha.1" targetFramework="net461" />
   <package id="Castle.Core" version="4.3.1" targetFramework="net461" />
+  <package id="DiscogsClient" version="2.3.0" targetFramework="net461" />
   <package id="Inflatable.Lastfm" version="1.1.999-prerelease" targetFramework="net461" />
   <package id="Moq" version="4.10.1" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="12.0.1" targetFramework="net461" />
@@ -10,8 +11,12 @@
   <package id="NUnitLite" version="3.11.0" targetFramework="net461" />
   <package id="Octokit" version="0.32.0" targetFramework="net461" />
   <package id="OpenCover" version="4.7.922" targetFramework="net461" />
+  <package id="RateLimiter" version="1.1.1" targetFramework="net461" />
+  <package id="RestSharp" version="106.6.9" targetFramework="net461" />
+  <package id="RestSharpHelper" version="1.1.1" targetFramework="net461" />
   <package id="System.Diagnostics.DiagnosticSource" version="4.6.0-preview.19073.11" targetFramework="net461" />
   <package id="System.Net.Http" version="4.3.4" targetFramework="net461" />
+  <package id="System.Reactive" version="4.0.0" targetFramework="net461" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.6.0-preview.19073.11" targetFramework="net461" />
   <package id="System.Security.Cryptography.Algorithms" version="4.3.1" targetFramework="net461" />
   <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="net461" />
