--- a/Last.fm-Scrubbler-WPF-Test/packages.config
+++ b/Last.fm-Scrubbler-WPF-Test/packages.config
@@ -14,10 +14,10 @@
   <package id="RateLimiter" version="1.1.1" targetFramework="net461" />
   <package id="RestSharp" version="106.6.9" targetFramework="net461" />
   <package id="RestSharpHelper" version="1.1.1" targetFramework="net461" />
-  <package id="System.Diagnostics.DiagnosticSource" version="4.6.0-preview.19073.11" targetFramework="net461" />
+  <package id="System.Diagnostics.DiagnosticSource" version="4.6.0-preview3.19128.7" targetFramework="net461" />
   <package id="System.Net.Http" version="4.3.4" targetFramework="net461" />
-  <package id="System.Reactive" version="4.0.0" targetFramework="net461" />
-  <package id="System.Runtime.CompilerServices.Unsafe" version="4.6.0-preview.19073.11" targetFramework="net461" />
+  <package id="System.Reactive" version="4.2.0-preview.102" targetFramework="net461" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.6.0-preview3.19128.7" targetFramework="net461" />
   <package id="System.Security.Cryptography.Algorithms" version="4.3.1" targetFramework="net461" />
   <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="net461" />
   <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net461" />
