--- a/Last.fm-Scrubbler-WPF-Test/packages.config
+++ b/Last.fm-Scrubbler-WPF-Test/packages.config
@@ -3,16 +3,17 @@
   <package id="Caliburn.Micro" version="4.0.0-alpha.1" targetFramework="net461" />
   <package id="Caliburn.Micro.Core" version="4.0.0-alpha.1" targetFramework="net461" />
   <package id="Castle.Core" version="4.4.0" targetFramework="net461" />
+  <package id="ComposableAsync.Core" version="1.0.3" targetFramework="net461" />
   <package id="DiscogsClient" version="2.5.1" targetFramework="net461" />
   <package id="Inflatable.Lastfm" version="1.1.999-prerelease" targetFramework="net461" />
-  <package id="Moq" version="4.11.0" targetFramework="net461" />
+  <package id="Moq" version="4.12.0" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net461" />
   <package id="NUnit" version="3.12.0" targetFramework="net461" />
   <package id="NUnitLite" version="3.12.0" targetFramework="net461" />
   <package id="Octokit" version="0.32.0" targetFramework="net461" />
   <package id="OpenCover" version="4.7.922" targetFramework="net461" />
-  <package id="RateLimiter" version="1.1.1" targetFramework="net461" />
-  <package id="RestSharp" version="106.6.9" targetFramework="net461" />
+  <package id="RateLimiter" version="2.0.0" targetFramework="net461" />
+  <package id="RestSharp" version="106.6.10" targetFramework="net461" />
   <package id="RestSharpHelper" version="1.1.1" targetFramework="net461" />
   <package id="System.Buffers" version="4.5.0" targetFramework="net461" />
   <package id="System.Diagnostics.DiagnosticSource" version="4.6.0-preview6.19303.8" targetFramework="net461" />
