--- a/Last.fm-Scrubbler-WPF/App.config
+++ b/Last.fm-Scrubbler-WPF/App.config
@@ -52,6 +52,9 @@
       <setting name="StartupUpdateCheck" serializeAs="String">
         <value>True</value>
       </setting>
+      <setting name="CSVEncoding" serializeAs="String">
+        <value>0</value>
+      </setting>
     </Scrubbler.Properties.Settings>
   </userSettings>
   <system.net>
