More fileparser improvements

--- a/Last.fm-Scrubbler-WPF/App.config
+++ b/Last.fm-Scrubbler-WPF/App.config
@@ -55,6 +55,9 @@
       <setting name="CSVEncoding" serializeAs="String">
         <value>0</value>
       </setting>
+      <setting name="CSVHasFieldsInQuotes" serializeAs="String">
+        <value>False</value>
+      </setting>
     </Scrubbler.Properties.Settings>
   </userSettings>
   <system.net>
